# semanticGIS

./: .gitignore  .gitmodules  README.md  gsce.py  package-lock.json  package.json  pyproject.toml  quartz.config.ts  semanticGIS_env.yml  test_aoi_dk_utm32.parquet  test_aoi_wgs84.parquet
.github/workflows/: deploy-pages.yml
content/: Glossary.md  Introduction.md  SPHERE Thread Conventions.md  SPHERE.md  conflict-files-obsidian-git.md  index.md
content/About/: Contact.md  Navigating the site.md  What is SemanticGIS.md
content/About SemanticGIS/: Map of Content Collection.md  index.md
content/About the site/: Demos.md  Integrating Generative AI.md  Map of Content Collection.md  My thoughts on learning GIS.md  Navigating the site.md  This site is a Digital Garden.md  Tutorials.md
content/Application domaines/: Energy planning.md  From Reality to Geospatial Data.md  Land use planning.md  The use of 3D geospatial data in urban planning.md  Wind turbines.md  landscape ecology.md
content/Classical Classifications/: index.md
content/Concepts/: GIS project.md  GIS.md  Relational Database (Concept).md
content/Core Concepts/: A Beginner's Guide to Safely Installing Software.md  Basemap.md  Design Rationale.md  Documenting analytical flow.md  GIS project.md  GIS.md  Geoinformatics.md  (+2 more)
docs/: index.md
env/: qgis_env.yml
environments/: semanticGIS_env.yaml
gsce/: mermaid.py
gui/: app.py
projects/: readme.md
scripts/: install.sh  semanticGIS.ps1  setup.ps1  setup.sh  start-environment.bat  start-qgis.bat  start-qgis.sh
tests/: passxml.ipynb
(+1322 files in other folders)
