[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticGIS"
version = "0.1.0"
description = "A semantic GIS environment for environmental science."
# You can add authors, license, etc. here

[tool.setuptools]
package-dir = {"" = "libs"}
packages = ["datafetch", "util"]